--- a/views/qrcode.pug
+++ b/views/qrcode.pug
@@ -3,6 +3,7 @@ extends layout
 block content
   h1= title
   p #{title}
-  a: img(src='https://ss1.bdstatic.com/5eN1bjq8AAUYm2zgoY3K/r/www/cache/static/protocol/https/home/img/qrcode/zbios_09b6296.png')
+  a: img(src=src)
+  p #{src}
   br
   a(href='https://www.google.com') Google
